# 3dlab

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  fly.toml  main.py  pyproject.toml  run.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
client/: Cargo.toml  index.html  trunk.toml
client/src/: app.rs  lib.rs  main.rs
client/src/renderer/: camera.rs  mod.rs  volume_renderer.rs
client/src/renderer/shaders/: axes.frag  axes.vert  volume.frag  volume.vert  volume.wgsl
scripts/: explore_h5.py  extract_target.py  plot_cross_section.py
server/: Cargo.toml
server/src/: hdf5_reader.rs  main.rs  routes.rs  state.rs
shared/src/: types.rs
