[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }

# UI framework
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"

# Math
glam = "0.29"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
log.workspace = true
env_logger.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "CssStyleDeclaration",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
gloo-net = "0.6"

[[bin]]
name = "client"
path = "src/main.rs"
required-features = ["native"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
native = []
